cambios a la estructura del proyecto

--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
 		<h1>Bird Visualizations <span class="slogan">with HTML5 and CSS3</span></h1>
 		<nav>
 			<a href="" class="menuinicio">Home</a>
-			<a href="#service">Servicios</a>
+			<a href="#databases">Aves</a>
 			<a href="#databases">Noticias</a>
-			<a href="#">Especies</a>
+			<a href="#service">Servicios</a>
 			<a href="#type">Lugares del parque</a>
 			<a href="#contacts" >Personal encargado</a>
 			<a href="#contacts" >Visitas</a>
-			<a href="#contacts" >Horarios</a>
-			<a href="#contacts" >Actividades</a>
-			<a href="#contacts" class="menufin">Tecnología</a>
+			<a href="#contacts" >Sensores</a>
+			<a href="#contacts" class="menufin">Actividades</a>
 		</nav>
 	</header>
 <main>
